--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
     app:
         build:
-            context: ./vendor/laravel/sail/runtimes/8.0
+            context: ./docker/8.0
             dockerfile: Dockerfile
             args:
                 WWWGROUP: ${WWWGROUP}
@@ -20,7 +20,7 @@ services:
         networks:
             - sail
         depends_on:
-            - mysql
+            - mysqlServerLaravel
             # - pgsql
             - redis
             # - selenium
@@ -30,9 +30,9 @@ services:
     #         - '/dev/shm:/dev/shm'
     #     networks:
     #         - sail
-    mysql:
+    mysqlServerLaravel:
         image: mysql:latest
-        container_name: mysql
+        container_name: mysqlServerLaravel
         command: --default-authentication-plugin=mysql_native_password
         ports:
             - '${FORWARD_DB_PORT:-3306}:3306'
@@ -71,9 +71,9 @@ services:
     # Check availble environment variables here: https://hub.docker.com/r/phpmyadmin/phpmyadmin/
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
-        container_name: pma
+        container_name: pmaLaravel
         environment:
-          PMA_HOST: mysql
+          PMA_HOST: mysqlServerLaravel
           PMA_PORT: 3306
           PMA_ARBITRARY: 1
         #   PMA_USER: root
@@ -84,7 +84,7 @@ services:
         # depends_on:
         #   - mysql
         links:
-          - mysql
+          - mysqlServerLaravel
         networks:
           - sail
 
